# finance_mcps

./: .gitignore  .npmrc  ARCHITECTURE.md  Cargo.toml  QUICKSTART.md  README.md  hivemind.config.json  package-lock.json  package.json
.changeset/: README.md  config.json  phase-3-core-infrastructure.md
.github/workflows/: README.md  ci.yml  publish.yml  release.yml
crates/corp-finance-core/: Cargo.toml
crates/corp-finance-core/src/: covenant.rs  credit_metrics.rs  dcf.rs  debt_capacity.rs  error.rs  lib.rs  types.rs  wacc.rs
crates/corp-finance-core/src/core/: circular_solver.rs  mod.rs  time_value.rs
crates/corp-finance-core/src/fundamentals/: accounting_flows.rs  diluted_shares.rs  equity_enterprise_bridge.rs  mod.rs  sources_uses.rs  three_statement_model.rs  types.rs
crates/corp-finance-core/src/pe/: mod.rs  value_bridge.rs
crates/corp-finance-core/src/valuation/: football_field.rs  mod.rs  paper_lbo.rs  types.rs
scripts/: hivemind-build.sh
test/: test-integration.js
