[workspace]
members = [
    "crates/corp-finance-core",
    "packages/bindings",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Corp Finance MCP Team"]
license = "MIT"

[workspace.dependencies]
rust_decimal = "1.35"
rust_decimal_macros = "1.35"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
