[package]
name = "corp-finance-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
rust_decimal = { workspace = true, features = ["serde-with-float"] }
rust_decimal_macros = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
serde_json = "1.0"
